# p

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: nextrelease.yml
docs/: .gitignore  Pipfile  combine.yml  package.json  requirements.txt  tailwind.js
docs/content/: base.template.html  index.html  index.md
docs/content/assets/css/: _style.css  style.css
docs/content/static/css/: .postcssrc.js  _tailwind.config.js  _tailwind.dev.css
p/: __init__.py  cli.py  commands.py  core.py  git.py  groups.py  run.py
p/cls/: __init__.py  clevents.py  core.py
p/types/: __init__.py  base.py  carthage.py  combine.py  dep.py  js.py  make.py  python.py  scripts.py  subdir.py  terraform.py
scripts/: format  install  pre-commit
