[tool.poetry]
name = "p-cli"
version = "1.1.0"
description = "Aliases any available project commands or scripts to `p <name>`."
authors = ["Dave Gaeddert <dave.gaeddert@dropseed.io>"]
license = "MIT"
readme = "README.md"
homepage = "https://www.dropseed.io/p"
documentation = "https://www.dropseed.io/p"
repository = "https://github.com/dropseed/p"
keywords = ["cli", "alias", "commands", "scripts", "bin"]
packages = [
    { include = "p" }
]

[tool.poetry.scripts]
p = "p.cli:cli"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
